# geant4-projects

./: .gitignore
ship_PSSD/: 186bi.mac  CMakeLists.txt  Md253.mac  No253.mac  Tl182.mac  Tl206.mac  action.cc  action.hh  changes.diff  construction.cc  construction.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh  run.mac  ship_pssd.cc  stepping.cc  stepping.hh  vis.mac
ship_PSSD/UserData/: UserEvapData_z101.a253  UserEvapData_z81.a182  rad_z102.a253  z100.a251  z101.a253_323e1_394e1_454e1  z101.a253_323e2_394e2_454e2  z101.a253_323e2_394m1_454m1  z101.a253_rot  z102.a253  z98.a249
sim1/: .physics.hh.swp  .sim1.cc.swp  CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  physics.hh  run.cc  run.hh  sim1.cc  stepping.cc  vis.mac
sim1/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  run.mac  sim1
sim1/build2/root_outputs/: output0_t0.root  output0_t1.root  output0_t2.root  output0_t3.root  output0_t4.root  output0_t5.root  output0_t6.root  output0_t7.root
